# MeshChatIV

./: .dockerignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hardened  FAQ.md  MANIFEST.in  Makefile  README.md  SECURITY.md  Taskfile.yml  cx_setup.py  docker-compose.yml  eslint.config.mjs  forge.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt
.gitea/workflows/: build-test.yml  build.yml
.github/workflows/: android-apk-tag.yml  android-build.yml  bench.yml  build-linux-packages.yml  build-linux-release.yml  build-release.yml  build.yml  ci.yml  codeql.yml  docker.yml  frontend-build.yml  pypi.yml  security-scan.yml
android/: .gitignore  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/chaquopy-recipes/cryptography-49/patches/: openssl_no_legacy.patch  pyo3_no_interpreter.patch
docs/: meshchatx_on_quest_with_sidequest.md  meshchatx_on_raspberry_pi.md
electron/: backendProcess.js  crash.html  loading.html  main-legacy.js  main.js  preload.js
lang/: README.de.md  README.it.md  README.ja.md  README.ru.md  README.zh.md
meshchatx/: __init__.py  android_push_bridge.py  meshchat.py
meshchatx/src/: version.py
meshchatx/src/backend/: announce_manager.py  async_utils.py  audio_codec.py  auto_propagation_manager.py  bot_handler.py  bot_process.py  bot_templates.py  community_interfaces_directory.py  config_manager.py  docs_manager.py  forwarding_manager.py  http_url_guard.py  identity_context.py  identity_manager.py  integrity_manager.py  interface_editor.py  legacy_migrator.py  licenses_collector.py  lxmf_utils.py  map_manager.py  markdown_renderer.py  meshchat_utils.py  message_handler.py  nomadnet_downloader.py  page_node.py  persistent_log_handler.py  repository_server_manager.py  rncp_handler.py  rngit_tool.py  rnpath_handler.py  rnpath_trace_handler.py  rnprobe_handler.py  rns_fileshare_handler.py  rnstatus_handler.py  sticker_pack_utils.py  sticker_utils.py  telephone_manager.py  translator_handler.py  voicemail_manager.py  web_audio_bridge.py
meshchatx/src/backend/data/: THIRD_PARTY_NOTICES.txt  licenses_frontend.json
meshchatx/src/backend/database/: __init__.py  announces.py  gifs.py  legacy_migrator.py  messages.py  misc.py  provider.py  ringtones.py  schema.py  sticker_packs.py  stickers.py
meshchatx/src/backend/diagnostics/: memory_diagnostics.py
meshchatx/src/backend/interfaces/: WebsocketServerInterface.py
meshchatx/src/backend/recovery/: crash_recovery.py  health_monitor.py
meshchatx/src/frontend/: main.js
meshchatx/src/frontend/components/: App.vue  CommandPalette.vue  DropDownMenu.vue  LanguageSelector.vue  LxmfUserIcon.vue  NotificationBell.vue  Toast.vue  TutorialModal.vue
meshchatx/src/frontend/js/: DownloadUtils.js  GlobalState.js  MicronParser.js  MicronWasmLoader.js  NomadPageRenderer.js  Utils.js  interfaceDiscoveryUtils.js  lxmfConversationPreview.js  lxmfReactions.js  mapLinkUtils.js  messageTimestampGrouping.js  reticulumPathfinding.js
meshchatx/src/frontend/locales/: de.json  en.json  es.json  (+6 more)
packaging/arch/: PKGBUILD
scripts/: argos_translate.py  build-android-wheels-local.sh  build-backend.js  build-macos-universal.sh  build_community_interfaces_json.py  electron-forge-local-tmp.js  fetch-micron-wasm.mjs  install.sh  micron-parser-go-version.mjs  patch-electron-builder-fs.cjs  repack-android-pycodec2-wheels.py  sync_version.js  unify-backend-plain-files.sh  uninstall.sh
scripts/ci/: attest-release-assets.sh  cosign-signing-config-no-rekor.json  docker-build-entry.sh  docker-tags.sh  github-build-linux-flatpak.sh  github-build-linux-release-assets.sh  github-build-macos.sh  github-build-windows.sh  github-draft-release-upload-assets.sh  github-install-deps.sh  github-install-uv.sh  github-prune-electron-dist-staging.sh  github-slsa-hashes-desktop-dist.sh  setup-trivy.sh  slsa-predicate.py
scripts/rpi/: install_meshchatx.sh
tests/: test_android_push_bridge.py
tests/backend/: benchmarking_utils.py  conftest.py  run_comprehensive_benchmarks.py  test_android_codec2.py  test_android_rnode.py  test_announce_dao_trim.py  test_announce_limits.py  test_announce_limits_integration.py  test_announce_spam_sqlite.py  test_app_status_tracking.py  test_audio_codec.py  test_auto_propagation.py  test_auto_propagation_api.py  test_bot_handler_extended.py  test_concurrency_stress.py  test_config_manager.py  test_contacts_display_name_semantics.py  test_contacts_export_import.py  test_crash_recovery.py  test_csp_logic.py  test_dao_fuzzing.py  test_database_snapshots.py  test_deep_links_security.py  test_docs_manager.py  test_fuzzing.py  test_http_auth_security.py  test_http_url_guard.py  test_identity_restore_http_api.py  test_identity_switch.py  test_incoming_call_policy.py  test_integrity.py  test_interface_discovery.py  test_interface_discovery_ifac.py  test_interface_editor.py  test_interface_options.py  test_legacy_migrator.py  test_licenses_collector.py  test_long_running_stress.py  test_lxmf_attachments.py  test_lxmf_icons.py  (+41 more)
tests/backend/fixtures/: http_api_routes.json
tests/electron/: backendProcess.test.js  safeExternalUrl.test.js
tests/frontend/: AppModals.test.js  CallPage.test.js  ChangelogModal.test.js  ConversationViewer.outboundPropagationStatus.test.js  ConversationViewer.test.js  ConversationViewerButtons.test.js  DownloadUtils.test.js  LinkUtils.test.js  MapDrawing.test.js  MapPage.test.js  MapPageClustering.test.js  MessageSendingFailures.test.js  MessagesPage.test.js  MicronWasmLoader.test.js  NetworkVisualiser.test.js  NomadNetworkBrowser.test.js  NomadNetworkPage.test.js  RNGitExplorerPage.test.js  RelayHostMembersModal.test.js  ToolsPage.test.js  TranslatorPage.test.js  TutorialModalMigration.test.js  Utils.test.js  clampFloatingToViewport.test.js  deepLinks.protocol.security.test.js  lxmfConversationPreview.test.js  lxmfReactions.test.js  mapLinkUtils.security.test.js  mapTileProviders.test.js  reticulumPathfinding.test.js
tests/frontend/fixtures/: settingsPageTestApi.js
(+48 files in other folders)
