[project]
name = "reticulum-meshchatx"
version = "4.6.0"
description = "A simple mesh network communications app powered by the Reticulum Network Stack"
authors = [
  {name = "Quad4"}
]
license = "0BSD AND MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["reticulum", "meshchat", "lxmf", "rns"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "aiohttp>=3.13.3",
  "lxmf>=0.9.6",
  "lxmfy @ git+https://git.quad4.io/LXMFy/LXMFy.git",
  "psutil>=7.2.2",
  "rns>=1.1.9",
  "websockets>=16.0",
  "bcrypt>=5.0.0,<6.0.0",
  "aiohttp-session>=2.12.1,<3.0.0",
  "cryptography>=46.0.7,<47.0.0",
  "pycparser>=3.0",
  "audioop-lts>=0.2.2; python_version >= '3.13'",
  "ply>=3.11,<4.0",
  "lxst>=0.4.6",
  "jaraco.context>=6.1.1",
  "miniaudio (>=1.70,<2.0)",
]

[project.scripts]
meshchatx = "meshchatx.meshchat:main"
meshchat = "meshchatx.meshchat:main"
meshchatx-repository-http = "meshchatx.repository_http_standalone:main"

[project.urls]
Homepage = "https://git.quad4.io/RNS-Things/MeshChatX"

[tool.poetry]
packages = [{include = "meshchatx"}]

[tool.poetry.dependencies]
python = ">=3.11"
lxmfy = {git = "https://git.quad4.io/LXMFy/LXMFy.git"}
lxst = ">=0.4.6"

[tool.poetry.group.dev.dependencies]
cx-freeze = ">=7.0.0"
pygments = ">=2.20.0"
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
hypothesis = ">=6.151.9"
ruff = ">=0.14.0"
jsonschema = "^4.26.0"
mutmut = {version = "^3.5.0", python = "<4.0"}
pytest-xdist = "^3.8.0"

[[tool.poetry.include]]
path = "logo"

[tool.setuptools.packages.find]
where = ["."]
include = ["meshchatx*"]
namespaces = false

[tool.setuptools.package-data]
meshchatx = ["public/**/*", "public/*", "src/backend/data/community_interfaces.json", "src/backend/data/licenses_frontend.json", "src/backend/data/THIRD_PARTY_NOTICES.txt", "src/frontend/public/repository-server-index.html"]

[tool.setuptools.exclude-package-data]
meshchatx = ["public/repository-server-bundled/**"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".git",
    ".pnpm-store",
    "node_modules",
    "venv",
    ".venv",
    "tests/frontend",
]

[tool.ruff.lint]
extend-select = ["D"]
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "D401",
]

[tool.mutmut]
paths_to_mutate = ["meshchatx/src/backend/"]
pytest_add_cli_args_test_selection = [
    "tests/backend/",
    "--ignore=tests/backend/test_performance_hotpaths.py",
    "--ignore=tests/backend/test_memory_profiling.py",
    "--ignore=tests/backend/test_performance_bottlenecks.py",
]
